on spliterators, some quick performance check on spo of watdiv shows that parallelism can improve by a factor of 2 the performance; However registering iterators in sets when they are created constitutes a non-negligible overhead; In addition, the pausing will be more complicated.